--- a/style.css
+++ b/style.css
@@ -98,6 +98,22 @@ body, html {
   font-weight: 700;
 }
 
+.navbar .navbar-logo1 {
+  width: 145px;
+  height: 145px;
+  transform: scale(1.2);
+  padding-top: 1rem;
+  margin-top: -1rem;
+  margin-bottom: -4rem;
+  justify-content: center;
+  
+  filter: drop-shadow(0 0 1px #ffa6004b)
+          drop-shadow(0 0 3px #ffa6004b)
+          drop-shadow(0 0 5px #ffa6004b)
+          drop-shadow(0 0 15px #ffa6004b)
+          drop-shadow(0 0 25px #ffa6004b);
+}
+
 .navbar .navbar-logo {
   background: linear-gradient(to top, #8d4a2c, #fb8d19, #ffd54f);
   -webkit-background-clip: text;
